@@ -26,6 +26,7 @@ setup(
     long_description=open('README.rst').read() if exists('README.rst') else '',
     install_requires=["appdirs",
                       "dclab>=0.18.0",
+                      "fcswrite>=0.5.1",
                       "h5py>=2.8.0",
                       "numpy>=1.9.0",
                       "pyqt5",
